# windowsregistry.py

./: .gitignore  LICENSE  README.md  pyproject.toml
misc/: __windowsregistry.py  __windowsregistry_v2.py  dumb.py  dump.txt  dump_v2.txt
tests/: __init__.py  test_core.py  test_path.py
windowsregistry/: __init__.py  _backend.py  _lowlevel.py  _typings.py  core.py  errors.py  regpath.py  utils.py
windowsregistry/models/: __init__.py  data.py  enums.py
